Adds view specs for the eligibility check form
Here we also update the microcopy files, our specs check that our internationalisation code is working too. This means when we need to internationalise copy like buttons and labels we should be able to just update the config/locales/<lang>.yml file.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,4 +30,11 @@
 # available at https://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
+  hello: 'Hello world'
+  helpers:
+    label:
+      eligibility_check:
+        postcode: 'What is your postcode?'
+    submit:
+      eligibility_check:
+        create: 'Check eligibility'
