Adds a view spec for success screen microcopy

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -38,3 +38,7 @@ en:
     submit:
       eligibility_check:
         create: 'Check eligibility'
+  screens:
+    eligibility_success:
+      title: 'Success'
+      message: 'Great news. We deliver to your area.'
